作業4專案建置

--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="container item1">
+        <div class="header-member-bar">
             <div class="sale-bar">
                 <div class="header-onsale">
                     Last sale up to <b>20% OFF</b>. Use code <b>“SALE70”.</b>
@@ -31,7 +31,7 @@
                 </nav>
             </div>
         </div>
-        <div class="container item2">
+        <div class="header-logo-bar">
             <div class="logo-bar">
                 <div class="header-logo">
                     <a href=""><img src="img/logo.png" alt="Naturio"></a>
