--- a/BSHomeWork4/index.html
+++ b/BSHomeWork4/index.html
@@ -9,7 +9,94 @@
 </head>
 
 <body>
+    <div class="five-adv">
+        <div class="container adv-container">
+            <div class="adv-title">
+                <h2>五大優勢</h2>
+            </div>
+            <nav>
+                <span>操控樂趣</span>
+                <span>安全守護</span>
+                <span>乘坐舒適</span>
+                <span>以人為本</span>
+                <span>引以為傲</span>
+            </nav>
+        </div>
 
+        <div class="container adv-img-wall">
+            <div class="control-img-wall">
+                <div class="main-img">
+                    <img src="img/advantage-1-video-button-bg.png" alt="">
+                </div>
+
+                <div class="control-fun">
+                    <div class="fun-title">
+                        <h1><span>01</span>操控樂趣</h1>
+                    </div>
+                    <div class="fun-content">
+                        <h2>人人滿意的駕駛體驗</h2>
+                        <P>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，想是受隨新馳聘的行使快感。</P>
+                    </div>
+                </div>
+                <div class="bg-img"></div>
+
+                <a class="video-btn" href=""><img src="img/video-icon.png" alt=""></a>
+                <div class="control-revolution">
+                    <div class="revolution-content">
+                        <div class="revolution-title">
+                            <h3>因為我們做了這些革新</h3>
+                        </div>
+                        <h3>低重心設計</h3>
+                        <p>透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。</p>
+                        <h3>車體剛性強化</h3>
+                        <p>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提昇車身抗扭剛性，強化駕馭穩定性及安全性。</p>
+                        <h3>高性能懸吊</h3>
+                        <p>TNGA透過懸吊的高及完美懸吊幾何設定，保持輪胎貼地性，同時兼顧轉向靈敏度與傾西路敢傾西路敢回饋路感回饋，提昇駕馭體驗。</p>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+        <!-- 第二張圖牆 -->
+        <!-- <div class="img-wall-item1">
+            <div class="container adv-img-wall">
+                <div class="control-img-wall">
+                    <div class="main-img">
+                        <img src="img/advantage-1-video-button-bg.png" alt="">
+                    </div>
+
+                    <div class="control-fun">
+                        <div class="fun-title">
+                            <h1><span>01</span>操控樂趣</h1>
+                        </div>
+                        <div class="fun-content">
+                            <h2>人人滿意的駕駛體驗</h2>
+                            <P>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，想是受隨新馳聘的行使快感。</P>
+                        </div>
+                    </div>
+                    <div class="control-revolution">
+                        <div class="revolution-content">
+                            <div class="revolution-title">
+                                <h3>因為我們做了這些革新</h3>
+                            </div>
+                            <h3>低重心設計</h3>
+                            <p>透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。</p>
+                            <h3>車體剛性強化</h3>
+                            <p>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提昇車身抗扭剛性，強化駕馭穩定性及安全性。</p>
+                            <h3>高性能懸吊</h3>
+                            <p>TNGA透過懸吊的高及完美懸吊幾何設定，保持輪胎貼地性，同時兼顧轉向靈敏度與傾西路敢傾西路敢回饋路感回饋，提昇駕馭體驗。</p>
+                        </div>
+                    </div>
+
+                    <div class="bg-img"></div>
+
+                    <a class="video-btn" href=""><img src="img/video-icon.png" alt=""></a>
+                </div>
+            </div>
+        </div> -->
+    </div>
 </body>
 
 </html>
