TOYOTA position切版練習完成

--- a/BSHomeWork4/index.html
+++ b/BSHomeWork4/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="five-adv">
-        <div class="container adv-container">
+        <div class="container adv-boxing">
             <div class="adv-title">
                 <h2>五大優勢</h2>
             </div>
@@ -23,79 +23,140 @@
             </nav>
         </div>
 
-        <div class="container adv-img-wall">
-            <div class="control-img-wall">
-                <div class="main-img">
-                    <img src="img/advantage-1-video-button-bg.png" alt="">
+        <!-- 第一張圖牆 -->
+
+        <div class="adv-wall adv-wall-right">
+            <div class="bg-img"></div>
+            <div class="info">
+                <div class="info-title">
+                    <h1><span>01</span>操控樂趣</h1>
                 </div>
-
-                <div class="control-fun">
-                    <div class="fun-title">
-                        <h1><span>01</span>操控樂趣</h1>
-                    </div>
-                    <div class="fun-content">
-                        <h2>人人滿意的駕駛體驗</h2>
-                        <P>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，想是受隨新馳聘的行使快感。</P>
-                    </div>
+                <div class="info-content">
+                    <h2>人人滿意的駕駛體驗</h2>
+                    <P>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，想是受隨新馳聘的行使快感。</P>
                 </div>
-                <div class="bg-img"></div>
-
-                <a class="video-btn" href=""><img src="img/video-icon.png" alt=""></a>
-                <div class="control-revolution">
-                    <div class="revolution-content">
-                        <div class="revolution-title">
-                            <h3>因為我們做了這些革新</h3>
-                        </div>
-                        <h3>低重心設計</h3>
-                        <p>透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。</p>
-                        <h3>車體剛性強化</h3>
-                        <p>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提昇車身抗扭剛性，強化駕馭穩定性及安全性。</p>
-                        <h3>高性能懸吊</h3>
-                        <p>TNGA透過懸吊的高及完美懸吊幾何設定，保持輪胎貼地性，同時兼顧轉向靈敏度與傾西路敢傾西路敢回饋路感回饋，提昇駕馭體驗。</p>
-                    </div>
-                </div>
-
-
+            </div>
+            <a class="video-btn" href="">
+                <img src="img/advantage-1-video-button-bg.png" alt="">
+                <span><img src="img/video-icon.png" alt=""></span>
+            </a>
+            <div class="text">
+                <h2 class="text-title">因為我們做了這些革新——————————————</h2>
+                <h3>低重心設計</h3>
+                <p>透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。</p>
+                <h3>車體剛性強化</h3>
+                <p>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提昇車身抗扭剛性，強化駕馭穩定性及安全性。</p>
+                <h3>高性能懸吊</h3>
+                <p>TNGA透過懸吊的高及完美懸吊幾何設定，保持輪胎貼地性，同時兼顧轉向靈敏度與傾西路敢傾西路敢回饋路感回饋，提昇駕馭體驗。</p>
             </div>
         </div>
 
         <!-- 第二張圖牆 -->
-        <!-- <div class="img-wall-item1">
-            <div class="container adv-img-wall">
-                <div class="control-img-wall">
-                    <div class="main-img">
-                        <img src="img/advantage-1-video-button-bg.png" alt="">
-                    </div>
 
-                    <div class="control-fun">
-                        <div class="fun-title">
-                            <h1><span>01</span>操控樂趣</h1>
-                        </div>
-                        <div class="fun-content">
-                            <h2>人人滿意的駕駛體驗</h2>
-                            <P>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，想是受隨新馳聘的行使快感。</P>
-                        </div>
-                    </div>
-                    <div class="control-revolution">
-                        <div class="revolution-content">
-                            <div class="revolution-title">
-                                <h3>因為我們做了這些革新</h3>
-                            </div>
-                            <h3>低重心設計</h3>
-                            <p>透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。</p>
-                            <h3>車體剛性強化</h3>
-                            <p>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提昇車身抗扭剛性，強化駕馭穩定性及安全性。</p>
-                            <h3>高性能懸吊</h3>
-                            <p>TNGA透過懸吊的高及完美懸吊幾何設定，保持輪胎貼地性，同時兼顧轉向靈敏度與傾西路敢傾西路敢回饋路感回饋，提昇駕馭體驗。</p>
-                        </div>
-                    </div>
-
-                    <div class="bg-img"></div>
-
-                    <a class="video-btn" href=""><img src="img/video-icon.png" alt=""></a>
+        <div class="adv-wall adv-wall-left">
+            <div class="bg-img"></div>
+            <div class="info">
+                <div class="info-title">
+                    <h1>守護安全<span>02</span></h1>
+                </div>
+                <div class="info-content">
+                    <h2>行車更安心的高剛性車體</h2>
+                    <P>您的愛車會妥善保護您，強悍穩固的車身可使您安全無虞。世界級的安全功能讓您輕鬆自如享受旅程、毫無後顧之憂。</P>
                 </div>
             </div>
-        </div> -->
+            <a class="video-btn" href="">
+                <img src="img/advantage-2-video-button-bg.png"" alt="">
+                <span><img src=" img/video-icon.png" alt=""></span>
+            </a>
+            <div class="text">
+                <h2 class="text-title">因為我們做了這些革新——————————————</h2>
+                <h3>主動安全</h3>
+                <p>以先進的TSS系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</p>
+                <h3>被動安全</h3>
+                <p>堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</p>
+            </div>
+        </div>
+
+        <!-- 第三張圖牆 -->
+
+        <div class="adv-wall adv-wall-right">
+            <div class="bg-img"></div>
+            <div class="info">
+                <div class="info-title">
+                    <h1><span>03</span>乘坐舒適</h1>
+                </div>
+                <div class="info-content">
+                    <h2>令人放鬆舒適的車室空間</h2>
+                    <P>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。</P>
+                </div>
+            </div>
+            <a class="video-btn" href="">
+                <img src="img/advantage-3-video-button-bg.png"" alt="">
+                <span><img src=" img/video-icon.png" alt=""></span>
+            </a>
+            <div class="text">
+                <h2 class="text-title">因為我們做了這些革新——————————————</h2>
+                <h3>駕駛位置最佳化</h3>
+                <p>針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地操控方向盤。</p>
+                <h3>駕馭視野佳</h3>
+                <p>考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區最小化，使駕駛視野更開闊，同步提升駕馭安全。</p>
+                <h3>更寧靜的車室</h3>
+                <p>採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。</p>
+            </div>
+        </div>
+
+        <!-- 第四張圖牆 -->
+
+        <div class="adv-wall adv-wall-left">
+            <div class="bg-img"></div>
+            <div class="info">
+                <div class="info-title">
+                    <h1>以人為本<span>04</span></h1>
+                </div>
+                <div class="info-content">
+                    <h2>使用者導向的貼心設計</h2>
+                    <P>藉由高度人性化的介面整合、傳遞車輛資訊，豐富日常駕駛體驗。從提升油耗表現到行李箱空間最適化，均細心考慮，更加貼切使用者真正所需與習慣，並給於即時回應</P>
+                </div>
+            </div>
+            <a class="video-btn" href="">
+                <img src="img/advantage-4-video-button-bg.png"" alt="">
+                <span><img src=" img/video-icon.png" alt=""></span>
+            </a>
+            <div class="text">
+                <h2 class="text-title">因為我們做了這些革新——————————————</h2>
+                <h3>優異油耗表現</h3>
+                <p>以AURIS為例，更強勁的高效引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</p>
+                <h3>行李箱空間最適化</h3>
+                <p>以PRIUS為例，透過將電池位置移到後座下方，讓行李箱擁有更大的空間。</p>
+            </div>
+        </div>
+
+        <!-- 第五張圖牆 -->
+
+        <div class="adv-wall adv-wall-right">
+            <div class="bg-img"></div>
+            <div class="info">
+                <div class="info-title">
+                    <h1><span>05</span>引以為傲</h1>
+                </div>
+                <div class="info-content">
+                    <h2>極具吸引力的精心設計</h2>
+                    <P>TNGA車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。</P>
+                </div>
+            </div>
+            <a class="video-btn" href="">
+                <img src="img/advantage-5-video-button-bg.png"" alt="">
+                <span><img src=" img/video-icon.png" alt=""></span>
+            </a>
+            <div class="text">
+                <h2 class="text-title">因為我們做了這些革新——————————————</h2>
+                <h3>設計概念</h3>
+                <p>TNGA低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。</p>
+                <h3>環保概念</h3>
+                <p>為了對環境保護盡一份心力，，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。</p>
+            </div>
+        </div>
+
     </div>
 </body>
 
