作業5 BS複寫 專案建置

--- a/BSHomeWork4/index.html
+++ b/BSHomeWork4/index.html
@@ -41,7 +41,7 @@
                 <span><img src="img/video-icon.png" alt=""></span>
             </a>
             <div class="text">
-                <h2 class="text-title">因為我們做了這些革新——————————————</h2>
+                <h2 class="text-title">因為我們做了這些革新</h2>
                 <h3>低重心設計</h3>
                 <p>透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。</p>
                 <h3>車體剛性強化</h3>
