作業5 完成選單、介紹手機板

--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -11,28 +11,158 @@
 </head>
 
 <body>
-    <div class="header"></div>
+    <input type="checkbox" name="" id="menu-control">
+    <!-- Logo導覽列 -->
+    <div class="container">
+        <div class="header">
+            <div class="logo-group">
+                <div class="main-logo">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="img/BSlogo.png" alt=""></a>
+                        <a href="#">
+                            <h2 class="title">Build School</h2>
+                        </a>
+                    </div>
+                    <a class="sub-title" href="#">
+                        <span>developer career builder</span>
+                    </a>
+                </div>
 
-    <div class="amos">
+                <!-- 漢堡選單 -->
+                <label class="hb" for="menu-control">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+            </div>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#">台北班簡介</a></li>
+                    <li><a href="#">新竹班簡介</a></li>
+                    <li><a href="#">中華大學校內班簡介</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">歷屆老師</a></li>
+                    <li><a href="#">關於</a></li>
+                    <li><a href="#">問題及洽詢</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+    <!-- 幻燈片 -->
+    <div class="img-slide">
         <div class="owl-carousel owl-theme">
             <div>
-                <img src="https://picsum.photos/1300/300/?random=1">
-                1234
+                <img src="https://picsum.photos/1920/1080/?random=1">
             </div>
             <div>
-                <img src="https://picsum.photos/1300/300/?random=2">
+                <img src="https://picsum.photos/1920/1080/?random=2">
             </div>
             <div>
-                <img src="https://picsum.photos/1300/300/?random=3">
+                <img src="https://picsum.photos/1920/1080/?random=3">
             </div>
             <div>
-                <img src="https://picsum.photos/1300/300/?random=4">
+                <img src="https://picsum.photos/1920/1080/?random=4">
             </div>
             <div>
-                <img src="https://picsum.photos/1300/300/?random=5">
+                <img src="https://picsum.photos/1920/1080/?random=5">
             </div>
             <div>
-                <img src="https://picsum.photos/1300/300/?random=6">
+                <img src="https://picsum.photos/1920/1080/?random=6">
+            </div>
+        </div>
+    </div>
+
+    <!-- 介紹 -->
+    <div class="container">
+        <div class="info row">
+            <div class="test info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <img src="img/Build School-1.png">
+                        <h2>Build School</h2>
+                        <h2>/*我們的理念*/</h2>
+                    </div>
+                    <div class="txt">
+                        <p>Build = 將程式碼編譯及建置成<u>可執行的軟體</u></p>
+                        <p>Build = <u>動手做</u></p>
+                        <p>Build = 軟體開發<u>職涯的打造者</u></p>
+                    </div>
+                </div>
+            </div>
+            <div class="info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <h2>實作及就業導向的軟體開發學校</h2>
+                    </div>
+                    <div class="txt">
+                        <p>因應數位新時代的來臨，軟體、App、IoT
+                            、SaaS、雲端平台的應用需求大爆炸，軟體工程師的招募需求持續上升，以2016年5月求職平台的統計資料，從高科技、電商、金融、傳產、網路服務、軟體資訊、新創等各行業，台灣至少有
+                            27,000 位軟體開發工程師的職缺，甚至日本、新加坡等軟體及App 外商也來台灣求才。</p>
+                        <br>
+                        <p>為了彌補企業求才所需技能及實務教學上的落差，我們將前進校園，幫助想搭上軟體開發及互聯網經濟這艘火箭的同學們，打造更有競爭力的職涯!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <img src="img/Build School-2.png">
+                        <h2>動手實作才是真學習</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <h2>打造專案作品的學習方式</h2>
+                        <h2>(Project-based Learning)</h2>
+                    </div>
+                    <div class="txt">
+                        <p>透過身經百戰的實務講師、各大企業的資深軟體工程師或CTO，帶領同學實作一個真正能運作的產品開發，解決真實世界的問題，透過專題過程中的實作，培養解決問題的能力，這裏不只是程式教學或教育訓練，學的不只是技能，而是
+                            Learn how to learn，以因應變化多端的軟體開發技能，及自我尋找解答的能力。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <img src="img/Build School-3.png">
+                        <h2>就業銜接</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <h2>真正企業職場所需技能</h2>
+                        <h2>(Career Readiness)</h2>
+                    </div>
+                    <div class="txt">
+                        <p>除了透過打造專題作品過程，學到了技術及硬技能外，不同於一般的軟體培訓，我們更加入了簡報技巧、履歷及面試準備、以及真正軟體開發的團隊溝通及運作，這些軟實力 (Soft-Skill)
+                            的培養，讓同學能提早做好準備，在職場上成為一位專業的軟體工程師!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <img src="img/Build School-4.png">
+                        <h2>連結及影響力</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="info-content col-12 col-xl-6">
+                <div class="item">
+                    <div class="title">
+                        <h2>企業導師的連結</h2>
+                        <h2>(Mentor Network)</h2>
+                    </div>
+                    <div class="txt">
+                        <p>每一位在軟體開發上有實務經驗的企業導師，他們是各大企業的主管、資深軟體工程師或 CTO，其人際連結及資源將帶給同學更多更好的就業機會，你將比別人站得更高，看得更遠!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -45,15 +175,19 @@
                 loop: true,
                 nav: true,
                 margin: 40,
+                center: true,
+                navText: ['<img src="https://img.icons8.com/ios-glyphs/30/000000/double-left.png"/>',
+                    '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-right.png"/>'
+                ],
                 responsive: {
                     0: {
                         items: 1,
                     },
                     768: {
-                        items: 2,
+                        items: 1,
                     },
                     1200: {
-                        items: 5,
+                        items: 1,
                     }
                 }
             });
