--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -13,8 +13,8 @@
 <body>
     <input type="checkbox" name="" id="menu-control">
     <!-- Logo導覽列 -->
-    <div class="container">
-        <div class="header">
+    <div class="header">
+        <div class="container">
             <div class="logo-group">
                 <div class="main-logo">
                     <div class="logo">
@@ -75,9 +75,9 @@
     </div>
 
     <!-- 介紹 -->
-    <div class="container">
-        <div class="info row">
-            <div class="test info-content col-12 col-xl-6">
+    <div class="info">
+        <div class="container row">
+            <div class="info-content col-12 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <img src="img/Build School-1.png">
@@ -167,6 +167,88 @@
         </div>
     </div>
 
+    <!-- 18-27週 橫幅 -->
+
+    <div class="banner">
+        <div class="blue-layer">
+            <div class="container">
+                <p>18 - 24週的實作及作品開發 - 從訓練、就業、到企業連結</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- schedule 時程 -->
+
+    <div class="schedule">
+        <div class="container row">
+            <div class="schedule-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic">
+                        <h2>第 1 - 4 個月</h2>
+                        <img src="img/Build School-5.png" alt="program">
+                        <h2 class="title">程式基礎教學</h2>
+                    </div>
+                    <ul>
+                        <li>業界實戰講師</li>
+                        <li>企業主管/創業家/CTO 演講</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="schedule-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic">
+                        <h2>第 5 - 6 個月</h2>
+                        <img src="img/Build School-6.png" alt="program">
+                        <h2 class="title">作品導向實作</h2>
+                    </div>
+                    <ul>
+                        <li>Web / App 作品開發 - 企業導師指導</li>
+                        <li>不只是 Demo - 真實可運作成果</li>
+                        <li>團隊開發 - 真實軟體開發團隊的運作及分工 (Agile 敏捷, kanban 看板, CI 自動化建置 ...)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="schedule-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic">
+                        <h2>第 6 - 7 月</h2>
+                        <img src="img/Build School-7.png" alt="program">
+                        <h2 class="title">作品發表</h2>
+                    </div>
+                    <ul>
+                        <li>簡報及溝通技巧</li>
+                        <li>作品及程式碼講解</li>
+                        <li>個人履歷準備 – Github, codepen …</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="schedule-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic">
+                        <h2>未來及展望</h2>
+                        <img src="img/Build School-8.png" alt="program">
+                        <h2 class="title">就業及企業導師諮詢</h2>
+                    </div>
+                    <ul>
+                        <li>就業媒合或未來職涯諮詢</li>
+                        <li>企業導師 -人際連結及資源</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 18-27週 橫幅 -->
+
+    <div class="banner">
+        <div class="blue-layer">
+            <div class="container">
+                <p>在課程及作品實作中，將採用這些工具 - 熟悉實務上軟體開發團隊的運作、分工及真實專案的流程</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
     <script>
