全完成 剩餘幻燈片待調整

--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="all.css">
+    <script src="https://kit.fontawesome.com/6f7f75ad47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
 </head>
@@ -181,11 +182,13 @@
 
     <div class="schedule">
         <div class="container row">
-            <div class="schedule-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-xl-3">
                 <div class="item">
-                    <div class="pic">
+                    <div class="pic-area">
                         <h2>第 1 - 4 個月</h2>
-                        <img src="img/Build School-5.png" alt="program">
+                        <div class="img-area">
+                            <img src="img/Build School-5.png" alt="">
+                        </div>
                         <h2 class="title">程式基礎教學</h2>
                     </div>
                     <ul>
@@ -194,11 +197,13 @@
                     </ul>
                 </div>
             </div>
-            <div class="schedule-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-xl-3">
                 <div class="item">
-                    <div class="pic">
+                    <div class="pic-area">
                         <h2>第 5 - 6 個月</h2>
-                        <img src="img/Build School-6.png" alt="program">
+                        <div class="img-area">
+                            <img src="img/Build School-6.png" alt="">
+                        </div>
                         <h2 class="title">作品導向實作</h2>
                     </div>
                     <ul>
@@ -208,11 +213,13 @@
                     </ul>
                 </div>
             </div>
-            <div class="schedule-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-xl-3">
                 <div class="item">
-                    <div class="pic">
+                    <div class="pic-area">
                         <h2>第 6 - 7 月</h2>
-                        <img src="img/Build School-7.png" alt="program">
+                        <div class="img-area">
+                            <img src="img/Build School-7.png" alt="">
+                        </div>
                         <h2 class="title">作品發表</h2>
                     </div>
                     <ul>
@@ -222,11 +229,13 @@
                     </ul>
                 </div>
             </div>
-            <div class="schedule-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-xl-3">
                 <div class="item">
-                    <div class="pic">
+                    <div class="pic-area">
                         <h2>未來及展望</h2>
-                        <img src="img/Build School-8.png" alt="program">
+                        <div class="img-area">
+                            <img src="img/Build School-8.png" alt="">
+                        </div>
                         <h2 class="title">就業及企業導師諮詢</h2>
                     </div>
                     <ul>
@@ -238,12 +247,188 @@
         </div>
     </div>
 
-    <!-- 18-27週 橫幅 -->
+    <!-- tools開發工具 橫幅 -->
 
     <div class="banner">
         <div class="blue-layer">
             <div class="container">
                 <p>在課程及作品實作中，將採用這些工具 - 熟悉實務上軟體開發團隊的運作、分工及真實專案的流程</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- tools 開發工具 -->
+
+    <div class="tools">
+        <div class="container row">
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic-area">
+                        <div class="img-area">
+                            <img src="img/Build School-9.png" alt="">
+                        </div>
+                        <div class="img-area">
+                            <img src="img/Build School-10.png" alt="">
+                        </div>
+                        <h2 class="title">版本控管及程式碼管理</h2>
+                    </div>
+                    <ul>
+                        <li>學員之練習及作品之程式碼，皆採用主流的 git 當版本控管，熟悉版控的各種操作及實務專案運用; 課程中公開之練習程式碼，提交至 GitHub 上，其它學員可參考或供講師 Code
+                            Review 檢閱，並熟悉 Open Source 生態及工具</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic-area">
+                        <div class="img-area">
+                            <img src="img/Build School-11.png" alt="">
+                        </div>
+                        <div class="img-area">
+                            <img src="img/Build School-12.png" alt="">
+                        </div>
+                        <h2 class="title">作品開發及團隊管理</h2>
+                    </div>
+                    <ul>
+                        <li>除了使用 GitHub 外，專題開發階段也將使用 Microsoft Azure DevOps Services (原名Visual Studio Team Services)
+                            進行團隊開發、包括程式碼管理、工作項目追蹤、自動化建置等，熟悉一個軟體開發專案之流程、分工及日常工作。</li>
+                        <li>也可透過目前許多開發團隊常用的專案管理及看板工具 - Trello，進行工作分派、追蹤、或整個班的工作事項管理</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic-area">
+                        <div class="img-area">
+                            <img src="img/Build School-13.png" alt="">
+                        </div>
+                        <div class="img-area">
+                            <img src="img/Build School-14.png" alt="">
+                        </div>
+                        <h2 class="title">雲端平台及服務</h2>
+                    </div>
+                    <ul>
+                        <li>雲端平台的使用已逐漸成為一個成熟軟體開發團隊之基礎，並讓開發、測試、佈署工作更加的便利及自動化。因此學員將使用 Microsoft Azure
+                            當成作品及專案應用系統執行的雲端平台，包括 Azure App Service 建立網站服務、Azure SQL Database 建立資料庫服務</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="pic-area">
+                        <div class="img-area">
+                            <img src="img/Build School-15.png" alt="">
+                        </div>
+                        <div class="img-area">
+                            <img src="img/Build School-16.png" alt="">
+                        </div>
+                        <h2 class="title">團隊溝通協作及通知</h2>
+                    </div>
+                    <ul>
+                        <li>課程過程中的線上討論、遠端溝通、或技術分享，將可透過 Microsoft Teams 或Slack 工具。另外練習的程式碼提交至 GitHub、或是 Trello
+                            上的工作狀態更新，或是 Azure DevOps 上自動化建置的狀態，皆可發通知至 Microsoft Teams 或
+                            Slack，透過自動化提升工作效率，並熟悉一個軟體開發團隊的協同合作</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- compony 公司企業 橫幅 -->
+
+    <div class="banner">
+        <div class="blue-layer">
+            <div class="container">
+                <p>我們的講師及企業導師擁有在這些公司的工作經歷、擔任主管或資深工程師</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- compony 公司企業 logo圖牆 -->
+
+    <div class="compony">
+        <div class="container row">
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-17.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-18.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-19.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-20.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-21.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-22.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-23.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="wall-content col-12 col-xl-3">
+                <div class="item">
+                    <div class="img-area">
+                        <img src="img/Build School-24.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer -->
+
+    <div class="footer">
+        <div class="container">
+            <div class="item">
+                <h3>合作及接洽</h3>
+                <span>有興趣軟體工程師徵才、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</span>
+                <br>
+                <a href=""><span>email: contact@build-school.com 電話: 02-66057606</span></a>
+                <br>
+                <span>​台北: 台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)</span>
+                <br>
+                <span>新竹: 中華大學行政大樓圖資處</span>
+                <div class="icon-bar">
+                    <div class="icon">
+                        <a href=""><i class="fab fa-facebook-square"></i></a>
+                        <a href=""><i class="fab fa-youtube-square"></i></a>
+                    </div>
+                    <div class="date">
+                        <a href=""><u>隱私權宣告</u></a>
+                        <span>© 2020 by Build School</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -258,7 +443,8 @@
                 nav: true,
                 margin: 40,
                 center: true,
-                navText: ['<img src="https://img.icons8.com/ios-glyphs/30/000000/double-left.png"/>',
+                navText: [
+                    '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-left.png"/>',
                     '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-right.png"/>'
                 ],
                 responsive: {
