幻燈片修改

--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Build School - 軟體人才培訓 軟體工程師培訓 程式教育訓練 | 打造更有競爭力的軟體工程師職涯</title>
     <link rel="stylesheet" href="all.css">
     <script src="https://kit.fontawesome.com/6f7f75ad47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
+    <link rel="Shortcut Icon" type="image/x-icon" href="img/BSlogo.png" />
 </head>
 
 <body>
@@ -51,26 +52,35 @@
         </div>
     </div>
 
-    <!-- 幻燈片 -->
+    <!-- slide 幻燈片 -->
     <div class="img-slide">
         <div class="owl-carousel owl-theme">
             <div>
-                <img src="https://picsum.photos/1920/1080/?random=1">
+                <img src="img/slide-1.png">
             </div>
             <div>
-                <img src="https://picsum.photos/1920/1080/?random=2">
+                <img src="img/slide-2.png">
             </div>
             <div>
-                <img src="https://picsum.photos/1920/1080/?random=3">
+                <img src="img/slide-3.png">
             </div>
             <div>
-                <img src="https://picsum.photos/1920/1080/?random=4">
+                <img src="img/slide-4.png">
             </div>
             <div>
-                <img src="https://picsum.photos/1920/1080/?random=5">
+                <img src="img/slide-5.png">
             </div>
             <div>
-                <img src="https://picsum.photos/1920/1080/?random=6">
+                <img src="img/slide-6.png">
+            </div>
+            <div>
+                <img src="img/slide-7.png">
+            </div>
+            <div>
+                <img src="img/slide-8.png">
+            </div>
+            <div>
+                <img src="img/slide-9.png">
             </div>
         </div>
     </div>
@@ -443,10 +453,10 @@
                 nav: true,
                 margin: 40,
                 center: true,
-                navText: [
-                    '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-left.png"/>',
-                    '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-right.png"/>'
-                ],
+                // navText: [
+                //     '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-left.png"/>',
+                //     '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-right.png"/>'
+                // ],
                 responsive: {
                     0: {
                         items: 1,
